--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 title                    : "Khanh Doan"
-description              : "Research Resident at VinAI Research"
+description              : "Research Resident at Qualcomm AI Research"
 repository               : "dnkhanh45/dnkhanh45.github.io"
 google_scholar_stats_use_cdn : false
 
