--- a/_config.yml
+++ b/_config.yml
@@ -57,7 +57,7 @@ author:
   xing             :
   youtube          :
   wikipedia        :
-  cv               : # "resume/DuyNguyen_CV.pdf"
+  cv               : "resume/KhanhDoan_CV.pdf"
 
 
 # Reading Files
